Overflow Issue Fix

--- a/coffee_shop/Coffee_Shop/src/App.css
+++ b/coffee_shop/Coffee_Shop/src/App.css
@@ -4,6 +4,7 @@
 }
 
 .hero {
+    overflow: hidden;
     height: 100vh;
     background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(assets/coffee.jpg);
     background-size: cover;
