--- a/coffee_shop/Coffee_Shop/src/Components/navbar/navbar.css
+++ b/coffee_shop/Coffee_Shop/src/Components/navbar/navbar.css
@@ -4,27 +4,32 @@
 }
 
 .navbar {
+    height: 80px;
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(10px);
+    box-shadow: 0px 4px 12px rgba(32, 32, 32, 0.1);
     position: fixed;
-    width: 90%;
+    width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    margin-top: 4.5rem;
-    margin-right: 8rem;
+    justify-content: space-around;
+    margin-top: auto;
 }
 
 .logo {
+    align-items: center;
+    justify-content: space-around;
     cursor: pointer;
     display: flex;
     margin-top: auto;
-    margin-left: 13rem;
+    margin-left: 3rem;
 }
 
 .logo h2 {
     font-family: 'butter chicken';
     font-size: 2rem;
     letter-spacing: 0.2rem;
-    color: #ffffff;
+    color: #f19355;
 }
 
 .navbar li{
